Finish building out info tile display There are a TON of changes in this commit. Sorry for lumping everything together, but I set a goal to get a working preview of this bad boy out by the end of the day.
Primarily, this commit adds a new PropertiesTile module which represents a DOM element that actually displays properties of different chart objects. There were also some modifications to the DataSourceAdapter module to provide properties in the format we need them. I modified app.js to initialize the PropertiesTile and link it up to click events on the chart.

There is still a long way to go in the way of optimization. This should be ready to move to the release branch, but before it's finalized I have to add a ton of documentation and mobile optimize the styling.

We're getting close!

--- a/assets/css/style-main.css
+++ b/assets/css/style-main.css
@@ -12,6 +12,8 @@ body {
     font-weight: 300;
 }
 
+/* The Sunburst chart and its container */
+
 .periodic-sunburst {
     width: 100vw;
     height: 99vh;
@@ -32,4 +34,70 @@ body {
 
 .wj-tooltip {
     display: none;
+}
+
+/* The properties tile that goes in the center of the chart */
+
+.properties-tile {
+    display: block;
+    position: absolute;
+    height: 25%;
+    width: 10%;
+    background: transparent;
+    visibility: hidden;
+    text-align: center;
+    padding: 50px 5px 0 5px;
+}
+
+.properties-tile > div {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    display: none;
+    padding: 0;
+    margin: 0;
+    border: none;
+}
+
+.properties-tile > div > span {
+    display: block;
+}
+
+/* Specific info pane styling */
+/* TODO: use classes, not ids EVERYWHERE */
+
+#element-symbol {
+    font-size: 2em;
+    margin-bottom: 5px;
+}
+
+#element-name, #group-name {
+    font-size: 1.25em;
+    margin-bottom: 20px;
+}
+
+#group-name {
+    font-size: 1.5em;
+}
+
+.subgroups-title {
+    font-weight: bold;
+}
+
+#subGroup-name {
+    font-size: 1.25em;
+    margin-bottom: 5px;
+}
+
+.element-number-overview {
+    font-weight: bold;
+    margin-bottom: 15px;
+}
+
+#num-elements {
+    font-weight: normal;
+}
+
+.characteristics-title {
+    font-weight: bold;
 }
