New approach for styling selected panel(s) This method will style selected panels by shading their background and thickening panel "borders." It's definitely experimental as far as design goes, but I think it's subtle and indicative enough to use. Note that I still need to develop a method of extrapolating a clicked data label to its parent panel

--- a/assets/css/style-main.css
+++ b/assets/css/style-main.css
@@ -26,14 +26,17 @@ body {
 }
 
 .wj-flexchart .wj-state-selected {
-    stroke-width: 2px;
-    stroke: #F44336;
+    stroke-width: 3px;
     stroke-linecap: square;
     stroke-dasharray: 0;
 }
 
 .wj-tooltip {
     display: none;
+}
+
+.wj-data-label {
+    cursor: default;
 }
 
 /* The properties tile that goes in the center of the chart */
